# python-project-template

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  ruff.toml
{{cookiecutter.project_slug}}/: pyproject.toml  ruff.toml
